Changed enforcer plugin configuration to fail build when converged versions are found

--- a/oap-alert-slack/pom.xml
+++ b/oap-alert-slack/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.18.15</version>
+        <version>1.18.16</version>
     </parent>
 
 
@@ -52,6 +52,10 @@
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
                     <artifactId>jackson-databind</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
