--- a/oap-ws-cat/pom.xml
+++ b/oap-ws-cat/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>oap</artifactId>
         <groupId>oap</groupId>
-        <version>1.18.15</version>
+        <version>1.18.16</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>oap-ws-cat</artifactId>
@@ -25,6 +25,12 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpcore</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
