--- a/oap-logstream/pom.xml
+++ b/oap-logstream/pom.xml
@@ -63,6 +63,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
