--- a/oap-remoting-server/src/main/resources/META-INF/oap-module.conf
+++ b/oap-remoting-server/src/main/resources/META-INF/oap-module.conf
@@ -7,6 +7,7 @@
       parameters {
         server = "@service:oap-http-server"
         context = "remote"
+        serialization = DEFAULT
       }
       supervision.supervise = true
     }
