dictionary: added support for hocon (*.conf) configuration

--- a/oap-dictionary/src/test/resources/dictionary/test-dictionary.conf
+++ b/oap-dictionary/src/test/resources/dictionary/test-dictionary.conf
@@ -1,6 +1,6 @@
 {
-  "name": "test-dictionary",
-  "version": 1,
+  name = test-dictionary
+  version = 1
   "values": [
     {
       "id": "id1",
@@ -32,7 +32,7 @@
       "id": "id3",
       "enabled": true,
       "eid": "2",
-      "tags" : ["tag1", "tag2"]
+      "tags": ["tag1", "tag2"]
     }
   ]
 }
