--- a/oap-logstream/pom.xml
+++ b/oap-logstream/pom.xml
@@ -56,6 +56,11 @@
         </dependency>
         <dependency>
             <groupId>oap</groupId>
+            <artifactId>oap-json</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>oap</groupId>
             <artifactId>oap-metrics</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
