--- a/oap-http/pom.xml
+++ b/oap-http/pom.xml
@@ -32,7 +32,7 @@
     <parent>
         <artifactId>oap</artifactId>
         <groupId>oap</groupId>
-        <version>1.23.6</version>
+        <version>1.23.7</version>
     </parent>
     <dependencies>
         <dependency>
@@ -80,6 +80,13 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>3.10.4</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
