--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -45,7 +45,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.25.9</version>
+        <version>1.25.10</version>
     </parent>
 
     <dependencies>
@@ -164,6 +164,13 @@
                     <artifactId>guava</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.github.stephenc/jamm -->
+        <dependency>
+            <groupId>com.github.stephenc</groupId>
+            <artifactId>jamm</artifactId>
+            <version>${jamm.version}</version>
         </dependency>
     </dependencies>
 </project>
