Remoting config refactored

--- a/oap-remoting-server/src/main/resources/META-INF/oap-module.conf
+++ b/oap-remoting-server/src/main/resources/META-INF/oap-module.conf
@@ -3,7 +3,7 @@
   dependsOn = ["oap-http"]
   services {
     remoting {
-      implementation = "oap.application.remoting.Remote"
+      implementation = "oap.application.remote.Remote"
       parameters {
         server = "@service:oap-http-server"
         context = "remote"
