Add secure listener in oap-ws as a profile

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -54,5 +54,19 @@
         thread = true
       }
     }
+
+    secure-listener {
+      profile = secure-listener
+      implementation = oap.http.SecureHttpListener
+      parameters {
+        port = 8443
+        server = "@service:oap-http-server"
+        keystoreLocation = "/etc/oap/keystore.jks"
+        keystorePassword = "changeit"
+      }
+      supervision {
+        thread = true
+      }
+    }
   }
 }
