Start listeners when profiles are set

--- a/oap-remoting-server/src/main/resources/META-INF/oap-module.conf
+++ b/oap-remoting-server/src/main/resources/META-INF/oap-module.conf
@@ -3,6 +3,7 @@
   dependsOn = ["oap-http"]
   services {
     remoting {
+      profile = remoting
       implementation = "oap.application.remote.Remote"
       parameters {
         server = "@service:oap-http-server"
@@ -11,7 +12,8 @@
       }
       supervision.supervise = true
     }
-    secure-http-listener {
+    remoting-listener {
+      profile = remoting
       dependsOn = [oap-http-server]
       implementation = oap.http.SecureHttpListener
       parameters {
