--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -45,6 +45,7 @@
       }
     }
     plain-http-listener {
+      profile = plain-listener
       implementation = oap.http.PlainHttpListener
       parameters {
         port = 8880
@@ -55,7 +56,7 @@
       }
     }
 
-    secure-listener {
+    secure-http-listener {
       profile = secure-listener
       implementation = oap.http.SecureHttpListener
       parameters {
