--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <module>oap-ws-cat</module>
         <module>oap-alert</module>
         <module>oap-alert-slack</module>
+        <module>oap-media</module>
         <module>maven</module>
     </modules>
 
