--- a/oap-media/pom.xml
+++ b/oap-media/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.30.3</version>
+        <version>1.30.4</version>
     </parent>
 
     <dependencies>
@@ -41,6 +41,12 @@
             <groupId>oap</groupId>
             <artifactId>oap-ws</artifactId>
             <version>${project.parent.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>1.14</version>
         </dependency>
 
         <dependency>
