add: media storage url

--- a/oap-media/src/main/resources/META-INF/oap-module.conf
+++ b/oap-media/src/main/resources/META-INF/oap-module.conf
@@ -1,8 +1,8 @@
 {
   name = oap-media
   services {
-    ffprobe-media-processing {
-      implementation = oap.media.postprocessing.FFProbeMediaProcessing
+    vast-media-processing {
+      implementation = oap.media.postprocessing.VastMediaProcessing
       parameters {
         command = [
           ffprobe
