Use ws profiles in oap module configuration and detach them from service ones

--- a/oap-ws/src/test/resources/oap/ws/ws-profile.conf
+++ b/oap-ws/src/test/resources/oap/ws/ws-profile.conf
@@ -6,12 +6,13 @@
     }
     test-with-profile {
       service = with-profile
+      profile = test-profile
       protocol = HTTP
     }
-    not-configured-profile {
-      service = profile-not-configured
+    new-profile {
+      service = with-profile
+      profile = new-profile
       protocol = HTTP
     }
   }
-  profiles = [test-profile]
 }
