vast: fix duration

--- a/oap-media/src/main/resources/META-INF/oap-module.conf
+++ b/oap-media/src/main/resources/META-INF/oap-module.conf
@@ -5,7 +5,7 @@
       implementation = oap.media.postprocessing.VastMediaProcessing
       parameters {
         command = [
-          ffprobe, "-v", quiet, "-print_format", xml, "-show_format", "-show_streams", "{FILE}"
+          ffprobe, "-v", quiet, "-print_format", xml, "-show_format", "-sexagesimal", "-show_streams", "{FILE}"
         ]
         timeout = 30s
       }
