Add allowMethods in CORS configuration

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -22,6 +22,7 @@
         allowOrigin = "*"
         allowHeaders = "Content-type, Authorization"
         allowCredentials = true
+        allowMethods = [HEAD,POST,GET,PUT,DELETE,OPTIONS]
       }
     }
 
@@ -31,6 +32,7 @@
         domainRegexp = "^[^:/]*\\.oaplatform\\.org$"
         allowHeaders = "Content-type, Authorization"
         allowCredentials = true
+        allowMethods = [HEAD,POST,GET,PUT,DELETE,OPTIONS]
       }
     }
 
