Make validation errors more human friendly

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -8,7 +8,7 @@
         server = "@service:oap-http-server"
         sessionManager = "@service:session-manager"
         globalCorsPolicy = "@service:corsPolicy-generic"
-        default-response = JSON
+        defaultResponse = JSON
       }
       supervision {
         supervise = true
