Make interceptors depend on session aware

--- a/oap-ws/src/test/resources/oap/ws/ws-interceptors.conf
+++ b/oap-ws/src/test/resources/oap/ws/ws-interceptors.conf
@@ -3,7 +3,8 @@
     test {
       service = test
       protocol = HTTP
+      sessionAware = true
     }
   }
-  interceptors = [empty-interceptor,error-interceptor]
+  interceptors = [empty-interceptor, error-interceptor]
 }
