update: NIO Http Server

--- a/oap-http/src/main/resources/META-INF/oap-module.conf
+++ b/oap-http/src/main/resources/META-INF/oap-module.conf
@@ -1,8 +1,21 @@
 {
   name = oap-http
   services {
-    oap-http-server {
+    oap-http-io-server {
       implementation = oap.http.Server
+      profile = http-io
+      name = oap-http-server
+      parameters {
+        workers = 500
+      }
+      supervision {
+        supervise = true
+      }
+    }
+    oap-http-nio-server {
+      implementation = oap.http.nio.NioServer
+      profile = http-nio
+      name = oap-http-server
       parameters {
         workers = 500
       }
