--- a/oap-stats-db/pom.xml
+++ b/oap-stats-db/pom.xml
@@ -26,9 +26,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
-    <name>oap-alert</name>
-    <artifactId>oap-alert</artifactId>
+    <name>oap-stats-db</name>
+    <artifactId>oap-stats-db</artifactId>
 
     <parent>
         <groupId>oap</groupId>
@@ -36,18 +37,11 @@
         <version>1.43.12</version>
     </parent>
 
-
     <dependencies>
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-stdlib</artifactId>
+            <artifactId>oap-storage</artifactId>
             <version>${project.parent.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.rholder</groupId>
-            <artifactId>guava-retrying</artifactId>
-            <version>2.0.0</version>
         </dependency>
 
         <dependency>
