fix: FileStorage::delete

--- a/oap-storage-mongo/pom.xml
+++ b/oap-storage-mongo/pom.xml
@@ -27,8 +27,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>oap-storage</name>
-    <artifactId>oap-storage</artifactId>
+    <name>oap-storage-mongo</name>
+    <artifactId>oap-storage-mongo</artifactId>
 
     <parent>
         <groupId>oap</groupId>
@@ -39,12 +39,7 @@
     <dependencies>
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-stdlib</artifactId>
-            <version>${project.parent.version}</version>
-         </dependency>
-        <dependency>
-            <groupId>oap</groupId>
-            <artifactId>oap-json</artifactId>
+            <artifactId>oap-storage</artifactId>
             <version>${project.parent.version}</version>
          </dependency>
 
