--- a/oap-zabbix/src/main/resources/META-INF/oap-module.conf
+++ b/oap-zabbix/src/main/resources/META-INF/oap-module.conf
@@ -2,6 +2,7 @@
   name = oap-zabbix
   services {
     oap-zabbix {
+      profile = zabbix
       implementation = oap.zabbix.Zabbix
       parameters {
         port = 10051
