--- a/oap-zabbix/src/main/resources/META-INF/oap-module.conf
+++ b/oap-zabbix/src/main/resources/META-INF/oap-module.conf
@@ -3,10 +3,17 @@
   services {
     oap-zabbix {
       profile = zabbix
-      implementation = oap.zabbix.Zabbix
+      name = zabbix
+      implementation = oap.zabbix.ZabbixImpl
       parameters {
         port = 10051
       }
+    }
+
+    oap-zabbix-null {
+      profile = zabbix-null
+      name = zabbix
+      implementation = oap.zabbix.ZabbixNull
     }
   }
 }
