add: ws security

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -72,5 +72,19 @@
         thread = true
       }
     }
+
+    token-service {
+      profile = "ws-security"
+      implementation = oap.ws.security.TokenService
+      remoteName = "ws-token"
+    }
+    security-interceptor {
+      profile = "ws-security"
+      implementation = oap.ws.security.SecurityInterceptor
+      parameters {
+        tokenService = "@service:token-service"
+      }
+      dependsOn = [token-service]
+    }
   }
 }
