--- a/oap-application/src/test/resources/oap/application/KernelTest/dynaconf/application.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/dynaconf/application.conf
@@ -2,8 +2,8 @@
   profiles = []
   services {
     c1 {
-      parameters.x.defaultLocation = "file:"${java.io.tmpdir}"/dynaconf/default.conf"
-      parameters.x.updateLocation = "file:"${java.io.tmpdir}"/dynaconf/update.conf"
+      parameters.x.defaultLocation = "file:"${oap.test.tmpdir}"/dynaconf/default.conf"
+      parameters.x.updateLocation = "file:"${oap.test.tmpdir}"/dynaconf/update.conf"
     }
   }
 }
