--- a/oap-json-schema/src/main/resources/META-INF/oap-validator.conf
+++ b/oap-json-schema/src/main/resources/META-INF/oap-validator.conf
@@ -1,6 +1,7 @@
 {
   boolean = oap.json.schema._boolean.BooleanJsonValidator
   string = oap.json.schema._string.StringJsonValidator
+  text = oap.json.schema._string.StringJsonValidator
   date = oap.json.schema._date.DateJsonValidator
   array = oap.json.schema._array.ArrayJsonValidator
   object = oap.json.schema._object.ObjectJsonValidator
