json validators: static -> service

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -1,6 +1,9 @@
 {
   name = oap-ws
-  dependsOn = [oap-http]
+  dependsOn = [
+    oap-http
+    oap-validators
+  ]
   services {
     oap-ws-webservices {
       implementation = oap.ws.WebServices
@@ -9,11 +12,17 @@
         sessionManager = "@service:session-manager"
         globalCorsPolicy = "@service:corsPolicy-generic"
         defaultResponse = JSON
+        jsonValidators = "@service:json-validators"
       }
       supervision {
         supervise = true
       }
-      dependsOn = [session-manager, corsPolicy-generic, corsPolicy-subdomain]
+      dependsOn = [
+        session-manager
+        corsPolicy-generic
+        corsPolicy-subdomain
+        json-validators
+      ]
     }
 
     corsPolicy-generic {
