--- a/oap-json-schema/pom.xml
+++ b/oap-json-schema/pom.xml
@@ -34,7 +34,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.46.6</version>
+        <version>2.0.0</version>
     </parent>
 
     <dependencies>
@@ -49,6 +49,12 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>oap</groupId>
+            <artifactId>oap-application</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 </project>
