--- a/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
@@ -9,6 +9,11 @@
         i = 1
       }
     }
+
+    cm {
+      implementation = "oap.application.ServiceOne$ComplexMap"
+    }
+
     ServiceOneP1 {
       implementation = oap.application.ServiceOne
       profile = profileOne
@@ -23,8 +28,10 @@
             }
           }
         }
+        complexMap = "@service:cm"
         complexes = [{i = 2}]
       }
+      dependsOn = [cm]
       supervision.delay = 5ms
     }
   }
