--- a/oap-stats-db/src/main/resources/META-INF/json-mapping.properties
+++ b/oap-stats-db/src/main/resources/META-INF/json-mapping.properties
@@ -22,5 +22,4 @@
 # SOFTWARE.
 #
 
-mock-value = oap.statsdb.StatsDBTest$MockValue
-mock-child = oap.statsdb.StatsDBTest$MockChild
+node = oap.statsdb.Node
