--- a/oap-stats-db/src/main/resources/META-INF/json-mapping.properties
+++ b/oap-stats-db/src/main/resources/META-INF/json-mapping.properties
@@ -21,5 +21,5 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-
-node = oap.statsdb.Node
+node=oap.statsdb.Node
+id-node=oap.statsdb.IdNode
