add: mock security interceptor

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -87,13 +87,19 @@
       implementation = oap.ws.security.TokenService
       remoteName = "ws-token"
     }
-    security-interceptor {
+    security-interceptor-https {
+      name = security-interceptor
       profile = "ws-security"
       implementation = oap.ws.security.SecurityInterceptor
       parameters {
         tokenService = "@service:token-service"
       }
       dependsOn = [token-service]
+    }
+    security-interceptor-mock {
+      name = security-interceptor
+      profile = "ws-security-mock"
+      implementation = oap.ws.security.MockSecurityInterceptor
     }
   }
 }
