--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -34,7 +34,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>2.3.8</version>
+        <version>2.3.9</version>
     </parent>
 
     <dependencies>
@@ -160,6 +160,11 @@
             <groupId>com.github.stephenc</groupId>
             <artifactId>jamm</artifactId>
             <version>${jamm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.rholder</groupId>
+            <artifactId>guava-retrying</artifactId>
+            <version>2.0.0</version>
         </dependency>
     </dependencies>
 </project>
