--- a/oap-application/pom.xml
+++ b/oap-application/pom.xml
@@ -33,10 +33,16 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>2.3.9</version>
+        <version>3.0.0</version>
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-cli</artifactId>
