add: dictionary: extends

--- a/oap-dictionary/src/test/resources/dictionary/test-dictionary.conf
+++ b/oap-dictionary/src/test/resources/dictionary/test-dictionary.conf
@@ -6,7 +6,7 @@
       "id": "id1",
       "title": "title1",
       "enabled": true,
-      "eid": "1",
+      eid = "1"
       "values": [
         {
           "id": "id11",
