--- a/oap-security/oap-security-api/pom.xml
+++ b/oap-security/oap-security-api/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>3.0.8</version>
+        <version>3.1.0</version>
     </parent>
 
     <dependencies>
@@ -41,6 +41,13 @@
             <groupId>oap</groupId>
             <artifactId>oap-json</artifactId>
             <version>${parent.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
