--- a/oap-security/oap-security-mongo/pom.xml
+++ b/oap-security/oap-security-mongo/pom.xml
@@ -34,6 +34,7 @@
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
         <version>3.1.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <dependencies>
