add: oap-security-ws

--- a/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
@@ -21,7 +21,7 @@
     security-interceptor2-mock {
       name = security-interceptor2
       profile = "ws-security2-mock"
-      implementation = oap.ws.security.MockSecurityInterceptor2
+      implementation = oap.security.ws.MockSecurityInterceptor2
     }
 
   }
