--- a/oap-security/oap-security-backend/pom.xml
+++ b/oap-security/oap-security-backend/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>3.1.1</version>
+        <version>3.1.2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -54,6 +54,14 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>oap</groupId>
+            <artifactId>oap-application</artifactId>
+            <version>${parent.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
