--- a/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
@@ -9,14 +9,32 @@
       implementation = oap.security.ws.TokenService2
       remoteName = "ws-token2"
     }
+
+    password-hasher {
+      implementation = oap.ws.security.PasswordHasher
+    }
+
+    auth-service {
+      implementation = oap.security.ws.AuthService2
+      paramters {
+        userStorage = "@service:user-storage"
+        passwordHasher = "@service:password-hasher"
+      }
+      dependsOn = [
+        user-storage,
+        password-hasher
+      ]
+    }
+
     security-interceptor2-https {
       name = security-interceptor2
       profile = "ws-security2"
       implementation = oap.security.ws.SecurityInterceptor2
       parameters {
         tokenService = "@service:token2-service"
+        aclService = "@service:acl-service"
       }
-      dependsOn = [token2-service]
+      dependsOn = [token2-service, acl-service]
     }
     security-interceptor2-mock {
       name = security-interceptor2
