--- a/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
@@ -17,7 +17,7 @@
 
     auth-service {
       implementation = oap.security.ws.AuthService2
-      paramters {
+      parameters {
         userStorage = "@service:user-storage"
         passwordHasher = "@service:password-hasher"
       }
