--- a/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
@@ -5,12 +5,6 @@
   ]
   abstract = true
   services {
-    token2-service {
-      profile = "ws-security2"
-      implementation = oap.security.ws.TokenService2
-      remoteName = "ws-token2"
-    }
-
     password-hasher {
       implementation = oap.ws.security.PasswordHasher
     }
@@ -27,6 +21,17 @@
       ]
     }
 
+    token2-service {
+      profile = "ws-security2"
+      implementation = oap.security.ws.DefaultTokenService2
+      parameters {
+        authService = "@session:auth-service"
+      }
+      dependsOn = [
+        auth-service
+      ]
+    }
+
     security-interceptor2-https {
       name = security-interceptor2
       profile = "ws-security2"
@@ -37,6 +42,7 @@
       }
       dependsOn = [token2-service, acl-service]
     }
+
     security-interceptor2-mock {
       name = security-interceptor2
       profile = "ws-security2-mock"
