--- a/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
@@ -25,7 +25,7 @@
       profile = "ws-security2"
       implementation = oap.security.ws.DefaultTokenService2
       parameters {
-        authService = "@session:auth-service"
+        authService = "@service:auth-service"
       }
       dependsOn = [
         auth-service
