--- a/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
@@ -12,7 +12,9 @@
     auth-service {
       implementation = oap.security.ws.AuthService2
       parameters {
-        userStorage = "@service:user-storage"
+        providers = [
+          "@service:user-storage"
+        ]
         passwordHasher = "@service:password-hasher"
       }
       dependsOn = [
