--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -34,14 +34,14 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>3.3.6</version>
+        <version>3.3.7</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>1.10.19</version>
+            <version>2.0.2-beta</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
