--- a/oap-mail/src/main/resources/META-INF/oap-module.conf
+++ b/oap-mail/src/main/resources/META-INF/oap-module.conf
@@ -1,9 +1,16 @@
 {
   name = oap-mailman
   services {
+    abstract = true
     oap-mailman {
       implementation = oap.mail.Mailman
       profile = mail
+      parameters {
+        storage = "@service:mail-storage"
+      }
+      dependsOn = [
+        mail-storage
+      ]
       supervision {
         schedule = true
         delay = 1m
