--- a/oap-mail/src/main/resources/META-INF/oap-module.conf
+++ b/oap-mail/src/main/resources/META-INF/oap-module.conf
@@ -1,10 +1,11 @@
 {
   name = oap-mailman
+  abstract = true
   services {
-    abstract = true
-    oap-mailman {
-      implementation = oap.mail.Mailman
+    oap-mailman-smtp {
+      implementation = oap.mail.DefaultMailman
       profile = mail
+      name = oap-mailman
       parameters {
         storage = "@service:mail-storage"
       }
@@ -15,6 +16,12 @@
         schedule = true
         delay = 1m
       }
+    }
+
+    oap-mailman-mock {
+      implementation = oap.mail.MockMailman
+      profile = mail-mock
+      name = oap-mailman
     }
   }
 }
