--- a/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-security/oap-security-ws/src/main/resources/META-INF/oap-module.conf
@@ -57,6 +57,9 @@
         storage = "@service:temporary-token-storage"
         expiration = 1d
       }
+      dependsOn = [
+        temporary-token-storage
+      ]
       supervision {
         supervise = true
         schedule = true
