add: ws: exception mapping

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -13,6 +13,9 @@
         globalCorsPolicy = "@service:corsPolicy-generic"
         defaultResponse = JSON
         jsonValidators = "@service:json-validators"
+        exceptionToHttpCode {
+          "oap.storage.ConstraintException" = 400
+        }
       }
       supervision {
         supervise = true
