--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
                 <configuration>
                     <argLine>
                         -ea
@@ -133,7 +134,7 @@
                     <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
                     <!--<forkMode>once</forkMode>-->
                     <useSystemClassLoader>false</useSystemClassLoader>
-                    <runOrder>alphabetical</runOrder>
+                    <runOrder>balanced</runOrder>
                     <includes>
                         <include>**/*Test.*</include>
                         <include>**/*TestCase.*</include>
@@ -144,6 +145,7 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <version>3.0.1</version>
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
                     <execution>
