fix: json: cannot find class 'class oap.security.acl.TemporaryToken'

--- a/oap-security/oap-security-api/src/main/resources/META-INF/json-mapping.properties
+++ b/oap-security/oap-security-api/src/main/resources/META-INF/json-mapping.properties
@@ -1,3 +1,4 @@
 acl-role=oap.security.acl.AclRole
 acl-object=oap.security.acl.AclObject
 sc=oap.security.acl.SecurityContainer
+tt=oap.security.acl.TemporaryToken
