--- a/oap-security/oap-security-backend/src/test/resources/acl/test-acl-schema.conf
+++ b/oap-security/oap-security-backend/src/test/resources/acl/test-acl-schema.conf
@@ -1,23 +1,19 @@
 {
-  name = "acl-schema"
-  values = [
-    {
-      id = "root"
+  children {
+    root {
       permissions = [
         "user.create",
         "organization.create"
       ]
-      values = [
-        {
-          id = "user"
+      children {
+        user {
           permissions = [
             "user.read",
             "user.update",
             "user.delete"
           ]
         }
-        {
-          id = "organization"
+        organization {
           permissions = [
             "organization.read",
             "organization.update",
@@ -25,18 +21,17 @@
             "user.create",
             "user.invite"
           ]
-          values = [
-            {
-              id = "user",
+          children {
+            user {
               permissions = [
                 "user.read",
                 "user.update",
                 "user.delete"
               ]
             }
-          ]
+          }
         }
-      ]
+      }
     }
-  ]
+  }
 }
