Revert "Merge remote-tracking branch 'origin/master'"
This reverts commit 4b1fcf67a6448727928003bd1f5bf329139a2625, reversing
changes made to 93f028401b30885cd77c82c122b3170ac8379972.

--- a/oap-security/oap-security-backend/src/test/resources/acl/test-acl-schema.conf
+++ b/oap-security/oap-security-backend/src/test/resources/acl/test-acl-schema.conf
@@ -1,19 +1,23 @@
 {
-  children {
-    root {
+  name = "acl-schema"
+  values = [
+    {
+      id = "root"
       permissions = [
         "user.create",
         "organization.create"
       ]
-      children {
-        user {
+      values = [
+        {
+          id = "user"
           permissions = [
             "user.read",
             "user.update",
             "user.delete"
           ]
         }
-        organization {
+        {
+          id = "organization"
           permissions = [
             "organization.read",
             "organization.update",
@@ -21,17 +25,18 @@
             "user.create",
             "user.invite"
           ]
-          children {
-            user {
+          values = [
+            {
+              id = "user",
               permissions = [
                 "user.read",
                 "user.update",
                 "user.delete"
               ]
             }
-          }
+          ]
         }
-      }
+      ]
     }
-  }
+  ]
 }
