--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <groupId>oap</groupId>
     <artifactId>oap</artifactId>
-    <version>3.6.17</version>
+    <version>3.6.13</version>
 
     <name>oap</name>
 
@@ -53,6 +53,7 @@
         <module>oap-storage</module>
         <module>oap-storage-mongo</module>
         <module>oap-tsv</module>
+        <module>oap-etl</module>
         <module>oap-logstream</module>
         <module>oap-ws-cat</module>
         <module>oap-alert</module>
