add: mongo: migration

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -17,9 +17,7 @@
           "oap.storage.ConstraintException" = 400
         }
       }
-      supervision {
-        supervise = true
-      }
+      supervision.supervise = true
       dependsOn = [
         session-manager
         corsPolicy-generic
