add: mongo: migration

--- a/oap-storage-mongo/src/main/resources/META-INF/oap-module.conf
+++ b/oap-storage-mongo/src/main/resources/META-INF/oap-module.conf
@@ -3,7 +3,7 @@
   services {
     migration {
       profile = mongo-migration
-      implementation = oap.storage.mongo.Migration
+      implementation = oap.storage.mongo.DirectoryMigration
       parameters {
 //        directory = /tmp/migration
       }
