add: roles list

--- a/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
@@ -1,24 +1,24 @@
 {
-  name = "m1"
-  services {
+  %name = "m1"
+  %services {
     ServiceOneP2 {
-      implementation = oap.application.ServiceOne
-      profile = profileTwo
-      name = ServiceOne
-      parameters {
+      %implementation = oap.application.ServiceOne
+      %profile = profileTwo
+      %name = ServiceOne
+      %parameters {
         i = 1
       }
     }
 
     cm {
-      implementation = "oap.application.ServiceOne$ComplexMap"
+      %implementation = "oap.application.ServiceOne$ComplexMap"
     }
 
     ServiceOneP1 {
-      implementation = oap.application.ServiceOne
-      profile = profileOne
-      name = ServiceOne
-      parameters {
+      %implementation = oap.application.ServiceOne
+      %profile = profileOne
+      %name = ServiceOne
+      %parameters {
         i = 2 ms
         complex {
           i = 2
@@ -31,8 +31,8 @@
         complexMap = "@service:cm"
         complexes = [{i = 2}]
       }
-      dependsOn = [cm]
-      supervision.delay = 5ms
+      %dependsOn = [cm]
+      %supervision.delay = 5ms
     }
   }
 }
