--- a/oap-application/src/test/resources/oap/application/KernelTest/application.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/application.conf
@@ -9,5 +9,9 @@
 
     ServiceOneP1.parameters.i2 = ${one.i2}
 
+    ServiceOneP1.parameters.one.i2 {
+      %add: [{i = 3}]
+      %del: [{i = 2}]
+    }
   }
 }
