--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <module>oap-alert-slack</module>
         <module>oap-media</module>
         <module>oap-mail</module>
+        <module>oap-etl</module>
         <module>oap-stats-db</module>
         <module>oap-zabbix</module>
         <module>maven</module>
