--- a/oap-storage-mongo/pom.xml
+++ b/oap-storage-mongo/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>3.9.11</version>
+        <version>3.9.12</version>
     </parent>
 
     <dependencies>
@@ -41,12 +41,12 @@
             <groupId>oap</groupId>
             <artifactId>oap-storage</artifactId>
             <version>${project.parent.version}</version>
-         </dependency>
+        </dependency>
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-json</artifactId>
             <version>${project.parent.version}</version>
-         </dependency>
+        </dependency>
 
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -59,6 +59,13 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>oap</groupId>
+            <artifactId>oap-application</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
