add SecureHttpListener::private_network: true/false

--- a/oap-remoting-server/src/main/resources/META-INF/oap-module.conf
+++ b/oap-remoting-server/src/main/resources/META-INF/oap-module.conf
@@ -19,8 +19,7 @@
       parameters {
         port = 8980
         server = "@service:oap-http-server"
-        keystoreLocation = "/etc/oap/keystore.jks"
-        keystorePassword = "changeit"
+        private_network = false
       }
       supervision {
         thread = true
