--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -17,6 +17,7 @@
       }
       supervision.supervise = true
       dependsOn = [
+        oap-http-server
         session-manager
         corsPolicy-generic
         corsPolicy-subdomain
@@ -64,6 +65,9 @@
       supervision {
         thread = true
       }
+      dependsOn = [
+        oap-http-server
+      ]
     }
 
     secure-http-listener {
@@ -75,9 +79,10 @@
         keystoreLocation = "/etc/oap/keystore.jks"
         keystorePassword = "changeit"
       }
-      supervision {
-        thread = true
-      }
+      dependsOn = [
+        oap-http-server
+      ]
+      supervision.thread = true
     }
 
     token-service {
