--- a/oap-http/src/main/resources/META-INF/oap-module.conf
+++ b/oap-http/src/main/resources/META-INF/oap-module.conf
@@ -5,23 +5,15 @@
       implementation = oap.http.Server
       profile = http-io
       name = oap-http-server
-      parameters {
-        workers = 500
-      }
-      supervision {
-        supervise = true
-      }
+      parameters.workers = 500
+      supervision.supervise = true
     }
     oap-http-nio-server {
       implementation = oap.http.nio.NioServer
       profile = http-nio
       name = oap-http-server
-      parameters {
-        workers = 500
-      }
-      supervision {
-        supervise = true
-      }
+      parameters.workers = 500
+      supervision.supervise = true
     }
   }
 }
