--- a/oap-security/oap-security-mongo/pom.xml
+++ b/oap-security/oap-security-mongo/pom.xml
@@ -41,13 +41,13 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-security-backend</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-storage-mongo</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
