--- a/oap-security/oap-security-api/pom.xml
+++ b/oap-security/oap-security-api/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-json</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
