--- a/oap-security/oap-security-ws/pom.xml
+++ b/oap-security/oap-security-ws/pom.xml
@@ -41,17 +41,17 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-security-api</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-ws</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-storage</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
