--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>mvn</id>
+            <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -174,7 +181,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <serverId>nexus</serverId>
+                    <serverId>mvn</serverId>
                     <nexusUrl>http://localhost:8081/nexus/</nexusUrl>
                     <skipStaging>true</skipStaging>
                 </configuration>
