--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <repository>
+            <id>oap</id>
+            <url>https://mvn.oaplatform.org/</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
