--- a/oap-template/pom.xml
+++ b/oap-template/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>3.14.1</version>
+        <version>3.14.2</version>
     </parent>
 
     <dependencies>
@@ -42,6 +42,12 @@
             <artifactId>oap-stdlib</artifactId>
             <version>${project.parent.version}</version>
          </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.6</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
