--- a/oap-template/pom.xml
+++ b/oap-template/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>3.15</version>
+        <version>3.15.1</version>
     </parent>
 
     <dependencies>
@@ -41,12 +41,12 @@
             <groupId>oap</groupId>
             <artifactId>oap-stdlib</artifactId>
             <version>${project.parent.version}</version>
-         </dependency>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.6</version>
+            <version>${apache.commons.text.version}</version>
         </dependency>
 
         <dependency>
