--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <groupId>oap</groupId>
     <artifactId>oap</artifactId>
-    <version>3.15</version>
+    <version>3.15.1</version>
 
     <name>oap</name>
 
@@ -96,6 +96,7 @@
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.21</slf4j.version>
         <httpcomponents.version>4.4.10</httpcomponents.version>
+        <apache.commons.text.version>1.6</apache.commons.text.version>
         <compress.version>1.18</compress.version>
         <joda.version>2.10</joda.version>
         <metrics.version>3.2.6</metrics.version>
