fixed ws startup

--- a/oap-ws/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-ws/src/main/resources/META-INF/oap-module.yaml
@@ -11,7 +11,8 @@ services:
       defaultResponse: JSON
       exceptionToHttpCode:
         "oap.storage.ConstraintException": 400
-    supervision.supervise: true
+    supervision:
+      supervise: true
     dependsOn:
     - oap-http-server
     - session-manager
